<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Info -->
    <string name="app_name">Healthy App</string>

    <!-- Social -->
    <string name="facebook_app_id">352436308115292</string>

    <!-- Intents -->
    <string name="app_change">JZ_APP_CHANGE</string>
    <string name="activity_change">JZ_ACTIVITY_CHANGE</string>
    <string name="component_name">JZ_COMPONENT_NAME</string>

    <!-- View Titles -->
    <string name="title_activity_post_login">Account Setup</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_usage_alerts">Alerts</string>
    <string name="title_app_usage">App Usage</string>
    <string name="title_create_goal">Create Goal</string>
    <string name="title_lifeline_request">Lifeline Requests</string>
    <string name="title_manage_goals">Manage Goals</string>
    <string name="title_manage_users">Manage Users</string>
    <string name="title_user_profile">My Profile</string>
    <string name="title_user_rating">My Rating</string>
    <string name="title_user_settings">Settings</string>
    <string name="title_user_overview">Overview</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_edit_goal">Edit Goal</string>
    <string name="title_edit_user">Edit User</string>
    <string name="title_manage_mentor">Friends</string>

    <!-- HTTP -->
    <string name="server_error_title">Server Error</string>
    <string name="server_error_description">An internal server error has occurred. Please try again later.</string>
    <string name="deserialization_error_title">Error</string>
    <string name="deserialization_error_description">An error has occurred. Please try again later.</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error_description">A network error has occurred. Please make sure you are connected to the internet.</string>
    <string name="okay">Okay</string>

    <!-- Device Admin -->
    <string name="device_admin_request">In order to prevent tampering with the application choose the activate option below.</string>
    <string name="device_admin_description">Device Administration is used to prevent tampering with the application</string>
    <string name="device_admin_disable">Removing Healthy App as a device administrator will cause the application to stop functioning. Are you sure you want to continue?</string>
    <string name="post_login_admin_prompt">Please tap the button below to enable Healthy App as a device administrator. This is required to prevent uninstalling the application.</string>

    <!-- Login / Registration -->
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="create_account">No account?</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="logging_in">Logging in…</string>
    <string name="missing_email">Missing Email Address</string>
    <string name="missing_password">Missing Password</string>
    <string name="missing_name">Missing Name</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="register">create</string>
    <string name="confirm_password">confirm password</string>
    <string name="short_password">Password must be 6 characters</string>
    <string name="non_matching_password">Passwords do not match</string>
    <string name="creating_user">Creating User…</string>
    <string name="creating_mentor">Creating Mentor...</string>
    <string name="incorrect_credentials_title">Incorrect Email or Password</string>
    <string name="incorrect_credentials_description">Your email address or password is incorrect. Please try again.</string>
    <string name="registration_success_title">Registration Successful</string>
    <string name="registration_success_description">You have successfully registered. Please check your email to verify your account before logging in.</string>
    <string name="child_registration_success_title">Registration Successful</string>
    <string name="child_registration_success_description">You successfully registered a user.</string>
    <string name="child_edit_success_title">Edit Successful</string>
    <string name="child_edit_success_description">You successfully edited a user.</string>
    <string name="email_in_use">Email address is already in use.</string>
    <string name="Social_Login_RequestCode">social_login</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="admin_removal_label">Remove Device Administrator</string>
    <string name="lock_prefs_key">locked</string>
    <string name="logout_prefs_key">logout</string>
    <string name="update_user_key">update user profile</string>
    <string name="update_user_passwd">update user passwd</string>
    <string name="enable_device_admin">Enable Device Administrator</string>
    <string name="app_usage_limit_reached">Sorry, this App is no longer available to use today, please request more time from Administrator</string>
    <string name="app_alert_close">Close</string>
    <string name="app_alert_request">Request</string>
    <string name="app_alert_unlock">Unlock</string>

    <!-- Create Goal -->
    <string name="creating_goal">Creating goal...</string>
    <string name="editing_goal">Editing goal...</string>
    <string name="editing_user">Editing user...</string>
    <string-array name="goal_type">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>

    <!-- Preferences -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>

    <!-- Remote Logging -->
    <string name="remote_logging">RemoteLogging</string>

    <!-- Manage Users -->
    <string-array name="user_unavailable_selection">
        <item>Edit Goals</item>
        <item>Lock Status Unavailable</item>
        <item>Alerts</item>
        <item>Usage</item>
        <item>Edit User</item>
        <item>Remove</item>
    </string-array>

    <string-array name="user_lock_selection">
        <item>Edit Goals</item>
        <item>Lock Goals</item>
        <item>Alerts</item>
        <item>Usage</item>
        <item>Edit User</item>
        <item>Remove</item>
    </string-array>

    <string-array name="user_unlock_selection">
        <item>Edit Goals</item>
        <item>Unlock Goals</item>
        <item>Alerts</item>
        <item>Usage</item>
        <item>Edit User</item>
        <item>Remove</item>
    </string-array>

    <!-- View Type Spinner Drop down -->
    <string-array name="view_type_array">
        <item>5 Day View</item>
        <item>10 Day View</item>
        <item>15 Day View</item>
    </string-array>

    <string-array name="manage_goal_long_click">
        <item>App Usage</item>
        <item>Update Goal</item>
        <item>Delete Goal</item>
    </string-array>

    <!-- Mentors -->
    <string-array name="mentor_selection">
        <item>Remove</item>
    </string-array>

    <string name="mentor_removed_success">Removed Successfully</string>
    <string name="mentor_removed_failure">Removed Filed</string>

    <string name="no_mentor">You can select a friend to help you unlock your apps remotely when they are locked :)</string>
    <string name="network_error">Network Connection Failed</string>
    <string name="manage_goal_fragment">Manage_Goal_Fragment</string>
    <string name="no_password_option">Because you are logged in by Third-Party account, you can\'t change your password.</string>
    <string name="we_are_sorry">We are sorry...</string>

</resources>
