<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blue_stingray.healthy_life_app.ui.activity.LoginActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        style="@style/TitleText"
        android:id="@+id/user" />

    <TextView
        android:text="@string/create_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        style="@style/TitleText"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="12"
        android:id="@+id/emailField"
        android:hint="@string/email"
        android:layout_marginTop="81dp"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="12"
        android:id="@+id/passwordField"
        android:layout_below="@+id/emailField"
        android:layout_alignLeft="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:hint="@string/password"
        android:layout_alignRight="@+id/emailField"
        android:layout_alignEnd="@+id/emailField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="12"
        android:id="@+id/confirmPasswordField"
        android:layout_below="@+id/passwordField"
        android:layout_alignLeft="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:hint="@string/confirm_password"
        android:layout_alignRight="@+id/emailField"
        android:layout_alignEnd="@+id/emailField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_below="@+id/confirmPasswordField"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:layout_alignRight="@+id/passwordField"
        android:layout_alignEnd="@+id/passwordField"/>

</RelativeLayout>