<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.blue_stingray.healthy_life_app.ui.activity.LoginActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_vertical|center_horizontal"
        android:background="@color/blue_primary">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3"
            android:paddingBottom="60dp">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/imageView4"
                android:src="@drawable/healthy_white"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp" />

            <EditText
                style="@style/Input"
                android:inputType="textEmailAddress"
                android:id="@+id/emailField"
                android:hint="@string/email" />

            <EditText
                style="@style/Input"
                android:inputType="textPassword"
                android:id="@+id/passwordField"
                android:hint="@string/password" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="2"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:background="@drawable/link_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textSize="14dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:id="@+id/create_admin"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:onClick="showRegister"/>

                <Button
                    style="@style/Submit"
                    android:text="@string/login"
                    android:id="@+id/login"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>